gcc/testsuite/rust/compile/unterminated_c_comment.rs
// { dg-error "unexpected EOF while looking for end of comment" "" { target *-*-* } .+1 }
/* This  comment needs closure :) !
